added criteria