@@ -1,52 +1,59 @@
 package mate.academy.springintro.service.impl;
 
-import mate.academy.springintro.dto.CreateBookRequestDto;
-import mate.academy.springintro.model.Book;
+import java.util.List;
 import mate.academy.springintro.dto.BookDto;
+import mate.academy.springintro.dto.BookSearchParameters;
+import mate.academy.springintro.dto.CreateBookRequestDto;
 import mate.academy.springintro.exception.EntityNotFoundException;
 import mate.academy.springintro.mapper.BookMapper;
-import mate.academy.springintro.repository.BookRepository;
+import mate.academy.springintro.model.Book;
+import mate.academy.springintro.repository.book.BookRepository;
+import mate.academy.springintro.repository.book.BookSpecificationBuilder;
 import mate.academy.springintro.service.BookService;
+import org.springframework.data.jpa.domain.Specification;
 import org.springframework.stereotype.Service;
-
-import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class BookServiceImpl implements BookService {
 
     private final BookRepository bookRepository;
     private final BookMapper bookMapper;
+    private final BookSpecificationBuilder bookSpecificationBuilder;
 
-    public BookServiceImpl(BookRepository bookRepository, BookMapper bookMapper){
+    public BookServiceImpl(BookRepository bookRepository, BookMapper bookMapper,
+                           BookSpecificationBuilder bookSpecificationBuilder) {
         this.bookRepository = bookRepository;
         this.bookMapper = bookMapper;
+        this.bookSpecificationBuilder = bookSpecificationBuilder;
     }
 
     @Override
     public BookDto save(CreateBookRequestDto requestDto) {
         Book book = bookMapper.toModel(requestDto);
-        return bookMapper.toBookDto(bookRepository.save(book));
+        book = bookRepository.save(book);
+        return bookMapper.toBookDto(book);
     }
 
     @Override
     public List<BookDto> findAll() {
         return bookRepository.findAll().stream()
                 .map(bookMapper::toBookDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public BookDto findById(Long id) {
         Book book = bookRepository.findById(id).orElseThrow(
-                () -> new EntityNotFoundException("Can't find book by id " + id));
+                () -> new EntityNotFoundException(
+                        "Can't find book by id " + id));
         return bookMapper.toBookDto(book);
     }
 
     @Override
     public void updateBookById(Long id, CreateBookRequestDto requestDto) {
         Book book = bookRepository.findById(id).orElseThrow(
-                () -> new EntityNotFoundException("Can't find book by id " + id));
+                () -> new EntityNotFoundException(
+                        "Can't find book by id " + id));
         bookMapper.updateBookFromDto(requestDto, book);
         bookRepository.save(book);
     }
@@ -54,5 +61,13 @@ public class BookServiceImpl implements BookService {
     @Override
     public void deleteById(Long id) {
         bookRepository.deleteById(id);
+    }
+
+    @Override
+    public List<BookDto> search(BookSearchParameters params) {
+        Specification<Book> bookSpecification = bookSpecificationBuilder.build(params);
+        return bookRepository.findAll(bookSpecification).stream()
+                .map(bookMapper::toBookDto)
+                .toList();
     }
 }
